--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
-<ion-tabs color="color1">
-  <ion-tab [root]="tab1Root" tabTitle="Products" tabIcon="list"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Best Seller" tabIcon="trophy"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Cunt" tabIcon="contacts"></ion-tab>
+<ion-tabs color="color2">
+  <ion-tab [root]="tab1Root" tabTitle="Inicio" tabIcon="list"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Popular" tabIcon="trophy"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Contáctanos" tabIcon="contacts"></ion-tab>
 </ion-tabs>
