--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,19 +1,34 @@
 <ion-header>
-  <ion-navbar color="color1">
-    <ion-title font="Courier New">Products</ion-title>
+  <ion-navbar color="color2">
+    <ion-title><div class="a">Postres</div></ion-title>
+    <ion-buttons end>
+      <div class="b">
+        <ion-icon name="funnel" color="light" (click)="openFilterModal()"></ion-icon>
+      </div>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding class="home-Page">
-  <ion-card *ngFor="let product of allProducts" (click)="goToProductDetailPage(product)">
-    <img [src]="product.image"/>
-    <div class="card-title">{{product.name}}</div>
-    <div class="card-subtitle">{{product.gender}}</div>
-  </ion-card>
-
-  <ion-fab right bottom>
-    <button ion-fab (click)="openFilterModal()">
-      <ion-icon name="settings"></ion-icon>
-    </button>
-  </ion-fab>
+<ion-content class="home-Page">
+    <ion-list no-lines>
+      <ion-item-sliding *ngFor="let product of allProducts">
+        <ion-item (click)="goToProductDetailPage(product, product.id)">
+          <h1>{{product.name}}</h1>
+          <h3>${{product.price}}</h3>
+          <div class="maxHeight>"><img [src]="product.image"/></div>
+        </ion-item>
+        <ion-item-options side="right">
+          <button color="secondary" ion-button >
+            <ion-icon name="cart"></ion-icon>
+            Comprar
+          </button>
+        </ion-item-options>
+        <ion-item-options side="left">
+            <button color="primary" ion-button >
+              <ion-icon name="share"></ion-icon>
+              Compartir
+            </button>
+          </ion-item-options>
+        </ion-item-sliding>
+    </ion-list>
 </ion-content>
